--- a/views/compra/formulario_orden_compras.html
+++ b/views/compra/formulario_orden_compras.html
@@ -18,21 +18,21 @@
         <div class="form-group">
             <label for="nombre" class="col-sm-2 control-label">Señor / es:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="nombre" name="nombre" placeholder="">
+                    <input type="string" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
                 </div>
             <label for="codigo_postal" class="col-sm-2 control-label">Código Postal:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="codigo_postal" name="codigo_postal" placeholder="">
+                    <input type="string" class="form-control" id="codigo_postal" name="codigo_postal" placeholder="Código Postal">
                 </div>
         </div>
         <div class="form-group">
             <label for="domicilio" class="col-sm-2 control-label">Domicilio:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="domicilio" name="domicilio" placeholder="">
+                    <input type="string" class="form-control" id="domicilio" name="domicilio" placeholder="Domicilio">
                 </div>
             <label for="localidad" class="col-sm-2 control-label">Localidad:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="localidad" name="localidad" placeholder="">
+                    <input type="string" class="form-control" id="localidad" name="localidad" placeholder="Localidad">
                 </div>
         </div>
         <br>
@@ -40,11 +40,11 @@
         <div class="form-group">
             <label for="iva" class="col-sm-2 control-label">I.V.A.:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="iva" name="iva" placeholder="">
+                    <input type="string" class="form-control" id="iva" name="iva" placeholder="I.V.A.">
                 </div>
             <label for="cuit" class="col-sm-2 control-label">C.U.I.T:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="cuit" name="cuit" placeholder="">
+                    <input type="string" class="form-control" id="cuit" name="cuit" placeholder="C.U.I.T.">
                 </div>
         </div>
         <br>
@@ -52,31 +52,31 @@
         <div class="form-group">
             <label for="forma_envio" class="col-sm-2 control-label">Condición de Venta:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="forma_envio" name="forma_envio" placeholder="">
+                    <input type="string" class="form-control" id="forma_envio" name="forma_envio" placeholder="Condición de Venta">
                 </div>
             <label for="vendedor" class="col-sm-2 control-label">Vendedor:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="vendedor" name="vendedor" placeholder="">
+                    <input type="string" class="form-control" id="vendedor" name="vendedor" placeholder="Vendedor">
                 </div>
         </div>
         <div class="form-group">
             <label for="fecha_entrega" class="col-sm-2 control-label">Entrega Antes del:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="fecha_entrega" name="fecha_entrega" placeholder="">
+                    <input type="date" class="form-control" id="fecha_entrega" name="fecha_entrega" placeholder="">
                 </div>
             <label for="lugar_entrega" class="col-sm-2 control-label">Lugar de Entrega:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="lugar_entrega" name="lugar_entrega" placeholder="">
+                    <input type="string" class="form-control" id="lugar_entrega" name="lugar_entrega" placeholder="Lugar de Entrega">
                 </div>
         </div>
         <div class="form-group">
             <label for="despachar" class="col-sm-2 control-label">Despachar por:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="despachar" name="despachar" placeholder="">
+                    <input type="string" class="form-control" id="despachar" name="despachar" placeholder="Despachar por">
                 </div>
             <label for="observaciones" class="col-sm-2 control-label">Observaciones:</label>
                 <div class="col-sm-3">
-                    <input type="string" class="form-control" id="observaciones" name="observaciones" placeholder="">
+                    <input type="string" class="form-control" id="observaciones" name="observaciones" placeholder="Observaciones">
                 </div>
         </div>
          <div class="form-group">
@@ -101,7 +101,7 @@
     </center>
         <center>
             <footer>
-                <small>Sistema Contable Módulo Compras Sector Formulario Compras</small>
+                <small>Sistema Contable Módulo Compras Sector Formulario Orden Compras</small>
                 <address>AdminWebPro</address>
             </footer>
         </center>
