--- a/views/ventas/lista_ventas.html
+++ b/views/ventas/lista_ventas.html
@@ -18,9 +18,9 @@
           </thead>
         <tbody>
             <tr>
-                <th scope="row">01/10/2016</th>
+                <th scope="row">15/11/2016</th>
                 <td>Jorge Benitez</td>
-                <td>000000001</td>
+                <td>1</td>
                 <td>B</td>
                 <td>$36.75</td>
                 <td>$386.75</td>
@@ -29,12 +29,22 @@
                 <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
             </tr>
             <tr>
-                <th>30/10/2016</th>
-                <td>ZIA </td> 
-                <td>000000001</td>
+                <th>19/11/2016</th>
+                <td>ProductosMB - Martin Benitez </td> 
+                <td>1</td>
+                <td>A</td>
+                <td>$210</td>
+                <td>$2210</td>
+                <td>Credito</td>
+                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
+            </tr>
+            <tr>
+                <th>24/11/2016</th>
+                <td>ZIA- Ivan Zavala</td>
+                <td>2</td>
                 <td>A</td>
                 <td>$189</td>
-                <td>$1790.1</td>
+                <td>$1989</td>
                 <td>Credito</td>
                 <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
             </tr>
@@ -47,10 +57,10 @@
        <table class="table table-bordered">
            <tbody>
                <tr> <th scope="row">Cantidad de Ventas</th>
-                    <td>2</td>
+                    <td>3</td>
                </tr>
                <tr> <th scope="row">Valor total del Periodo</th>
-                    <td>2176.85</td>
+                    <td>4585.75</td>
                </tr>
             </tbody>
         </table>
