--- a/views/ventas/reporte_por_cliente.html
+++ b/views/ventas/reporte_por_cliente.html
@@ -28,7 +28,7 @@
         <div class="col-sm-3">
                 <select class="form-control" id="cant">
                   <option>ZIA- Ivan Zavala</option>
-                  <option>Leyendo Vinos Despertando Sentidos</option>
+                  <option>ProductosMB - Martin Benitez</option>
                 </select>
         </div>
     </div>
