--- a/views/ventas/detalle_ventas.html
+++ b/views/ventas/detalle_ventas.html
@@ -1,8 +1,8 @@
 {{extend 'layout.html'}}
 <h1>DETALLE DE VENTA</h1>
 <div class="form-group">
-    <h4><caption>Nro. Comprobante: {{=nro_cbte}}, Fecha: {{=fecha}},
-                 Cliente: {{=reg_cliente.razon_social}}, Tipo de Comprobante:{{=reg_cliente.tipo_factura}}
+    <h4><caption>Nro. Comprobante: <i><u>{{=nro_cbte}}</u></i>, Fecha: <i><u>{{=fecha}}</u></i>,
+                 Cliente: <i><u>{{=reg_cliente.nombre_de_fantasia}} - {{=reg_cliente.razon_social}}</u></i>, Tipo de Comprobante:<i><u>"{{=reg_cliente.tipo_factura}}"</u></i>
         </caption></h4>
 </div>
 <form class="form-horizontal" action="{{=URL(c="ventas", f="detalle_ventas")}}" enctype="multipart/form-data" method="POST">
