--- a/views/ventas/lista_ventas_por_cliente.html
+++ b/views/ventas/lista_ventas_por_cliente.html
@@ -18,12 +18,12 @@
           </thead>
         <tbody>
             <tr>
-                <th>30/10/2016</th>
-                <td>ZIA </td> 
-                <td>000000001</td>
+                <th>19/11/2016</th>
+                <td>ProductosMB - Martin Benitez </td> 
+                <td>1</td>
                 <td>A</td>
-                <td>$189</td>
-                <td>$1790.1</td>
+                <td>$210</td>
+                <td>$2210</td>
                 <td>Credito</td>
                 <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
             </tr>
@@ -40,7 +40,7 @@
                     <td>1</td>
                </tr>
                <tr> <th scope="row">Valor total del Periodo</th>
-                    <td>$1790.1</td>
+                    <td>$2210</td>
                </tr>
             </tbody>
         </table>
