--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -2,114 +2,66 @@
 
 <h1>Registrar Legajo</h1>
 
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
-<div class="form-group">
+{{=form.custom.begin}}
+<div class="form-group row">
             <label for="campo_fdnih" class="col-sm-4 control-label">Fotoc. DNI Hijos</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                      {{=form.custom.widget.fotocopia_dni_hijos}} <!--estas variables hacen el input-->
             </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
+             
     </div>
-<div class="form-group">
+<div class="form-group row">
             <label for="campo_fdnic" class="col-sm-4 control-label">Fotoc. DNI Cónyuge</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                    {{=form.custom.widget.fotocopia_dni_conyuge}}            
             </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
+              
     </div>
-    <div class="form-group">
+    <div class="form-group row">
             <label for="campo_ccuilh" class="col-sm-4 control-label" name = "constancia_cuil_hijos" >Constancia CUIL Hijos</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                    {{=form.custom.widget.constancia_cuil_hijos}}
             </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
+             
     </div>
-    <div class="form-group">
+    <div class="form-group row">
             <label for="campo_ccuilh" class="col-sm-4 control-label" name = "constancia_cuil_cony">Constancia CUIL Cónyuge</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
+                    {{=form.custom.widget.constancia_cuil_conyuge}}
             </div>
     </div>
-    <div class="form-group">
+<div class="form-group row">
             <label for="campo_caregh" class="col-sm-4 control-label" name = "constancia_alum_reg_hijo">Constancia Alumno Regular Hijo</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                        {{=form.custom.widget.constancia_Alumno_Regular_Hijo}}
             </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-    <div class="form-group">
+</div>           
+
+    <div class="form-group row">
             <label for="campo_careg" class="col-sm-4 control-label" name = "constancia_alum_reg_empl">Constancia Alumno Regular Empleado</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                      {{=form.custom.widget.constancia_Alumno_Regular_empleado}}
             </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
+              
     </div>
-<div class="form-group">
+<div class="form-group row">
             <label for="campo_cve" class="col-sm-4 control-label" name = "curriculum_empleado">Currículum Empleado</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
+                      {{=form.custom.widget.curriculum_empleado}}
             </div>
     </div>
 
-</table>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos2")}}" enctype="multipart/form-data" method="POST">
-      <button type="submit" class="btn btn-default">volver</button>
-<form/>
-            </div>
+<div class="form-group row">
+    <div class=" col-sm-offset-1  col-sm-2">
+    
+      <a href="{{=URL(c="sueldos", f="legajos2")}}" class="btn btn-default">Volver</a>
+    
     </div>
-    <center>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
-    <button class="btn btn-default" type="submit">Guardar</button>
-    </center>
-<form/>
+     <div class="col-sm-2">
+
+      <button type="submit" class="btn btn-default">guardar</button>
+             {{=form.custom.widget.submit}}
+     </div>
+    
+</div>
+{{=form.custom.end}}
