--- a/views/compra/informe_subdiarioa.html
+++ b/views/compra/informe_subdiarioa.html
@@ -1,49 +1,46 @@
 {{extend 'layout.html'}}
 <h1>Reporte</h1>
-<form class="form-horizontal" action="{{=URL(c="compra", f="informe_subdiariob")}}" enctype="multipart/form-data" method="POST">
-  <div class="form-group">
-    <label for="desde" class="col-sm-2 control-label">Fecha Desde</label>
-    <div class="col-sm-10">
-      <input type="date" class="form-control" id="desde" name="fecha_desde" placeholder="">
+{{=form.custom.begin}}
+    <div class="row">
+        <div class="col-sm-10">
+
+    <div class="row">
+            <label class="control-label col-sm-1">Desde </label>
+            <div class="col-sm-2">
+                    {{=form.custom.widget.desde}}
+            </div>
+        <label class="control-label col-sm-1">Hasta </label>
+        <div class="col-sm-2">
+                    
+                    {{=form.custom.widget.hasta}}
+            </div>
+        <label class="control-label col-sm-1">Proveedor </label>
+        <div class="col-sm-2">
+                    
+                    {{=form.custom.widget.proveedor}}
+            </div>
+        <label class="control-label col-sm-1">Condición </label>
+        <div class="col-sm-2">
+                    
+                    {{=form.custom.widget.condicion_iva}}
+            </div>   
+        
     </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Fecha Hasta</label>
-    <div class="col-sm-10">
-      <input type="date" class="form-control" id="hasta" name="fecha_hasta" placeholder="">
+            
+            </div>
+        <div class="col-sm-2">
+             <input type="submit" class="btn btn-default" value="siguiente">
+            </div>
+</div>    
+{{=form.custom.end}}
+<br><br>
+{{if table :}}
+{{=table}}
+<br><br>
+<div class="row">
+        <div class="col-sm-5">
+            {{=resultante}}
     </div>
-  </div>
- 
-    <div class="form-group">
-        <label for="cant" class="col-sm-2 control-label">Proveedor</label>
-        <div class="col-sm-3">
-                <select class="form-control" id="cant">
-                  <option>REX</option>
-                  <option>CompuLiderSA</option>
-                </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="cant" class="col-sm-2 control-label">Condición Frente al IVA</label>
-        <div class="col-sm-3">
-                <select class="form-control" id="cant">
-                  <option>Consumidor Final</option>
-                  <option>Responzable Inscripto</option>
-                </select>
-        </div>
-    </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" name="ordenar"> Ordenar alfabeticamente
-        </label>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Generar Reporte</button>
-    </div>
-  </div>
-</form>
+</div>
+
+{{pass}}
