--- a/views/ventas/abm_ventas.html
+++ b/views/ventas/abm_ventas.html
@@ -18,9 +18,9 @@
             </div>
     </div>
     <div class="form-group">
-            <label for="campo_fecha" class="col-sm-1 control-label">FECHA</label>
+            <label class="col-sm-1 control-label">FECHA</label>
             <div class="col-sm-2">
-                <input type="date" class="form-control" name="fecha" id="campo_fecha" placeholder="Data input">
+                <input type="date" class="form-control" name="fecha" value="{{= "2016-11-29" }}">
             </div>
             <label for="campo_tipo" class="col-sm-2 control-label">TIPO DE PAGO</label>
             <div class="col-sm-2">
