Nuevos cambios para que aparesca la fecha actual

--- a/views/ventas/abm_ventas.html
+++ b/views/ventas/abm_ventas.html
@@ -20,7 +20,7 @@
     <div class="form-group">
             <label class="col-sm-1 control-label">FECHA</label>
             <div class="col-sm-2">
-                <input type="date" class="form-control" name="fecha" value="{{= "2016-11-29" }}">
+                <input class="form-control" name="fecha" value="{{=hoy}}">
             </div>
             <label for="campo_tipo" class="col-sm-2 control-label">TIPO DE PAGO</label>
             <div class="col-sm-2">
